# pet-projects

computational_methods/lab_1/: main.cpp
computational_methods/lab_10/: CMakeLists.txt  Gauss_Method.cpp  Gauss_Method.h  Integral_equation_solver.cpp  Integral_equation_solver.h  SLAE_solve.cpp  SLAE_solve.h  TMatrix.h  TVector.h  Test_functions.cpp  Test_functions.h  main.cpp
computational_methods/lab_2/: CMakeLists.txt  constants.h  gaussMethod.h  inverseMatrix.h  main copy.cpp  main.cpp  matrix.h  norm.h  print.h  qrMethod.h
computational_methods/lab_3/: CMakeLists.txt  constants.h  eigen.h  gaussMethod.h  input.h  inter.cpp  inverseMatrix.h  main.cpp  matrix.h  memory.h  norm.h  print.h  qrMethod.h  vector.h
computational_methods/lab_4/: interpolation.cpp
computational_methods/lab_5/: CMakeLists.txt  find_root.cpp  find_root.h  main.cpp  tests.hpp  utils.cpp  utils.h
computational_methods/lab_6/: CMakeLists.txt  TVector.h  TVector.hpp  euler.cpp  euler.h  main.cpp  tests.hpp  (+6 more)
computational_methods/lab_7/: CMakeLists.txt  function_bound_conditions.cpp  function_bound_conditions.h  initial_and_boundary_conditions.cpp  initial_and_boundary_conditions.h  lab_tasks.h  main.cpp  methods.cpp  methods.h  task_checking_order.cpp  task_monotony.cpp  task_quantity.cpp  task_test_1_2.cpp  task_test_3.cpp  task_test_var_17.cpp  utils.cpp  utils.h
ml_course/: clustering.ipynb  forest.ipynb  gbm.ipynb  knn.ipynb  logistic.ipynb  metrics.ipynb  metrics_knn.ipynb  numpy.ipynb  pandas.ipynb  pca.ipynb  perceptron.ipynb  salary.ipynb  svm.ipynb  svm_text.ipynb  tree.ipynb
(+66 files in other folders)
